--- a/app/src/main/res/layout/activity_new_act.xml
+++ b/app/src/main/res/layout/activity_new_act.xml
@@ -121,8 +121,7 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_rounded_15_blue">
 
-            <TextView
-                android:id="@+id/texttambahkan"
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tambahkan"
@@ -130,6 +129,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="20dp"
+                android:theme="@style/Button.Transparent"
                 android:background="@drawable/bg_rounded_15_blue"
                 android:textColor="@color/white"/>
 
