--- a/app/src/main/res/layout/fragment_educational_article.xml
+++ b/app/src/main/res/layout/fragment_educational_article.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:id="@+id/scrollView1"
+    android:background="#000000"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,14 +15,135 @@
     android:paddingTop="50dp"
     android:paddingEnd="40dp"
     android:background="#E2F1F8"
+    android:orientation="vertical"
     tools:context=".EducationalArticleFragment">
 
-    <TextView
-        android:id="@+id/textwelcome"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.ActionMenuView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textartikel"
+            android:layout_width="154dp"
+            android:layout_height="54dp"
+            android:layout_gravity="start"
+            android:paddingEnd="15dp"
+            android:text="Artikel Edukasi"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/textpilihan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:text="Pilihan artikel terpercaya" />
+    </androidx.appcompat.widget.ActionMenuView>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_rounded_15_blue"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/texttumbuhkembanganak"
+            android:paddingStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:text="Tumbuh Kembang Anak"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <Button
+            android:id="@+id/buttonpertumbuhanperkembangan"
+            android:paddingStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:layout_gravity="center"
+            android:theme="@style/Button.Transparent"
+            android:background="@drawable/bg_rounded_30"
+            android:text="Pertumbuhan dan Perkembangan"/>
+
+        <Button
+            android:id="@+id/buttontumbuhkembang"
+            android:paddingStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="350dp"
+            android:layout_height="100dp"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:layout_gravity="center"
+            android:theme="@style/Button.Transparent"
+            android:background="@drawable/bg_rounded_30"
+            android:text="Tumbuh Kembang Anak"/>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_rounded_15_blue"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textkekerasananak"
+            android:paddingStart="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:text="Kekerasan Anak"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <Button
+        android:id="@+id/buttonkekerasanfisik"
+        android:paddingStart="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
         android:textColor="@color/black"
-        android:text="Selamat Datang, William!" />
+        android:textSize="15dp"
+        android:layout_gravity="center"
+        android:theme="@style/Button.Transparent"
+        android:background="@drawable/bg_rounded_30"
+        android:text="Kekerasan Fisik"/>
+
+    <Button
+        android:id="@+id/buttonkekerasananak"
+        android:paddingStart="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:layout_gravity="center"
+        android:theme="@style/Button.Transparent"
+        android:background="@drawable/bg_rounded_30"
+        android:text="Kekerasan pada Anak"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
