--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="@color/black"
-        android:textSize="22dp"
+        android:textSize="30dp"
         android:text="Forum Diskusi"
         android:textStyle="bold"/>
 
@@ -37,11 +37,9 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="18dp"
-            android:text="Artikel Anak:\nKekerasan Fisik Pada Anak"
-
-
-            />
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:text="Artikel Anak \n Kekerasan Fisik Pada Anak"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -61,25 +59,24 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="20dp"
                 android:src="@drawable/image1" />
 
             <Button
                 android:id="@+id/buttonuser1"
-                android:layout_width="250dp"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textSize="12dp"
+                android:layout_marginLeft="5dp"
                 android:theme="@style/Button.Primary"
                 android:background="@drawable/bg_rounded_30"
                 android:gravity="left"
-                android:text="Bu Ajeng\nSusu yang bagus untuk umur 3 tahun apa ya?"
-
-                />
+                android:text="Bu Ajeng\nSusu yang bagus untuk umur 3 tahun apa ya?"/>
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -99,30 +96,32 @@
                 android:layout_gravity="center"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="20dp"
                 android:src="@drawable/image1" />
 
             <Button
                 android:id="@+id/buttonuser2"
-                android:layout_width="250dp"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="12dp"
                 android:theme="@style/Button.Primary"
                 android:background="@drawable/bg_rounded_30"
                 android:gravity="left"
-
                 android:text="Ibu Sri\nCara mengatur emosi untuk tidak melampiaskan ke anak?" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttondiskusi"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:gravity="center"
-            android:text="Formulir List Diskusi"
+            android:hint="Tambahkan Diskusi"
             android:textSize="12dp"
+            android:textAllCaps="false"
             android:paddingTop="5dp"
             android:textAlignment="center"
             android:layout_marginStart="35dp"
@@ -132,11 +131,7 @@
             android:layout_marginBottom="500dp"
             android:colorAccent="@style/Button.White"
             android:background="@drawable/bg_rounded_30"
-            android:textColor="@color/black"
-
-
-            />
-
+            android:textColor="@color/black"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
