--- a/app/src/main/res/layout/fragment_pick_child.xml
+++ b/app/src/main/res/layout/fragment_pick_child.xml
@@ -14,12 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pilih Profil Anak"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="#86BBD0"
         android:gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anak Pertama"
+        android:textColor="@color/black"
         android:layout_marginBottom="10dp"
         android:gravity="center"/>
 
@@ -27,12 +31,14 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="William" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anak Kedua"
+        android:textColor="@color/black"
         android:layout_marginBottom="10dp"
         android:gravity="center"/>
 
@@ -40,13 +46,37 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="Jean" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anak Ketiga"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Steve"
+        android:textAllCaps="false"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anak Keempat"
+        android:textColor="@color/black"
         android:layout_marginBottom="10dp"
-        android:text=">" />
+        android:gravity="center"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
