--- a/app/src/main/res/layout/fragment_pick_child.xml
+++ b/app/src/main/res/layout/fragment_pick_child.xml
@@ -79,4 +79,19 @@
         android:text="+"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/buttonRegister"
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/bg_rounded_15_blue"
+        android:text="Pilih"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:padding="0dp"
+        android:theme="@style/Button.Primary"
+        android:layout_marginBottom="40dp"/>
+
 </LinearLayout>
